--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,11 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
-firebase_options.dart/
-firebase.json/
+
+# Firebase configuration files
+
+lib/firebase_options.dart
+firebase.json
 
 # Symbolication related
 app.*.symbols
