--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   get: ^4.6.6
   flutter_localization: ^0.3.1
   razorpay_flutter: ^1.3.7
+  firebase_messaging: ^15.2.2
+  flutter_local_notifications: ^18.0.1
 
 dev_dependencies:
   flutter_test:
