--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ migrate_working_dir/
 
 lib/firebase_options.dart
 firebase.json
+android/app/src/main/res/values/strings.xml
 
 # Symbolication related
 app.*.symbols
