--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,4 +49,6 @@ flutter {
 
 dependencies {
     implementation("com.google.firebase:firebase-messaging:23.4.0")
+    implementation 'com.facebook.android:facebook-android-sdk:latest.release'
+
 }
